--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "mariella-next.js",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
-  }
+	"name": "mariella-next.js",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"migrate:postgres": "dotenv -e .env.local -- npx prisma migrate dev"
+	},
+	"dependencies": {
+		"@auth/core": "^0.28.0",
+		"@prisma/client": "^5.10.2",
+		"next": "14.1.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"styled-components": "^6.1.8"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.25",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.3",
+		"prisma": "^5.10.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.2"
+	}
 }
