--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"migrate:postgres": "dotenv -e .env.local -- npx prisma migrate dev"
+		"migrate:dev": "dotenv -e .env.local -- npx prisma migrate dev"
 	},
 	"dependencies": {
 		"@auth/core": "^0.28.0",
